crates/runtime/tests/ui/tuple_struct_not_supported.stderr
error: `Layered` does not support tuple structs
         help: layering resolves values by field name, so fields must be named
 --> tests/ui/tuple_struct_not_supported.rs:4:8
  |
4 | struct Config(u16, String);
  |        ^^^^^^
