crates/runtime/tests/ui/tuple_struct_not_supported.rs
use clap_layers::Layered;

#[derive(Layered)]
struct Config(u16, String);

fn main() {}
